# joob_assistant

./: .gitignore  Dockerfile.local  README.md  docker-compose.yaml  main.py  pyproject.toml  req.txt
ai_analyse/: job_item_analyse.py
alembic/: env.py
alembic/versions/: 2d733bbc71fe_add_jobb_model_and_chenge_user.py  8400c4ff15dc_models_py_creation.py  9e76773fd540_create_initial_tables.py  afdd5a5c0629_add_jobb_items.py  b26d78bccf00_add_jobb_model.py  dd8e18eb3a62_change_defauld_value_of_job_status.py  fc4721bfcced_models_py_creation.py
databese/: models.py  settings.py
handlers/: create_profile.py  menu_handler.py  start_handler.py  user_profile_handler.py
handlers/job_handlers/: add_job_url.py  get_job_item_analyse.py  set_job_item_status.py  show_job_items.py  update_job_item.py
handlers/profile_handlers/: create_profile.py  education_handler.py  email_handler.py  experience_handler.py  git_hub_handler.py  hard_skills_handler.py  languages_handler.py  linkedin_handler.py  projects_handler.py  soft_skills_handler.py  user_profile_handler.py
keyboards/: job_keyboard.py  main_keyboard.py  profile_keyboard.py
routes/: routes.py
settings/: logging_config.py
src/ai_analyse/: job_item_analyse.py
src/ai_cover_letter/: ai_cover_letter_generation.py
src/alembic/: env.py
src/alembic/versions/: 41672b600bfb_models_py_creation.py
src/databese/: models.py  settings.py
src/google_sheets_service/: get_token.py  google_sheets_service.py
src/handlers/: menu_handler.py  start_handler.py
src/handlers/cover_letter_handlers/: cover_letter_handler.py
src/handlers/job_handlers/: add_job_url.py  finish_adding_handler.py  get_job_item_analyse.py  get_update_job_handler.py  job_additional_info_handler.py  (+4 more)
src/keyboards/: job_item_actions_keyboard.py  job_keyboard.py  main_keyboard.py  profile_keyboard.py
src/rate_limit/: ai_summaty_rate_limit.py
src/routes/: routes.py
src/settings/: config.py  redis_config.py
src/utils/: report_generator.py
states/: education_state.py  hard_skills_state.py  languages_state.py  linkedin_state.py  soft_skills_state.py
states/job_states/: job_analyse_state.py  job_item_url_state.py
states/profile_states/: experience_state.py  git_hub_state.py  projects_state.py
tests/: conftest.py  test_start_handler.py
utils/: valid_url_checker.py
(+17 files in other folders)
