[tool.poetry]
name = "job-assistent"
version = "0.1.0"
description = "Job assistant project"
authors = ["dimakohanskyi <dimakohanskyi@gmail.com>"]
readme = "README.md"
package-mode = false



[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "24.1.0"
aiogram = "3.20.0.post0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.18"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
attrs = "25.3.0"
certifi = "2025.4.26"
frozenlist = "1.6.0"
idna = "3.10"
magic-filter = "1.0.12"
multidict = "6.4.4"
propcache = "0.3.1"
pydantic = "2.11.5"
pydantic_core = "2.33.2"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.41"}
typing-inspection = "0.4.1"
typing_extensions = "4.14.0"
yarl = "1.20.0"
dotenv = "^0.9.9"
alembic = "^1.16.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
watchdog = "^3.0.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"  # Приклад для тестів, додайте за потреби

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"